--- a/src/components/Content/InfoBlock/style.module.scss
+++ b/src/components/Content/InfoBlock/style.module.scss
@@ -3,17 +3,6 @@
   height: 100%;
   background: rgba(242, 242, 242, 1);
 
-  .pickRep {
-    overflow-wrap: break-word;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Roboto;
-    font-size: 14px;
-    font-weight: 400;
-    color: rgba(79, 79, 79, 1);
-  }
   .languages {
     flex-wrap: wrap;
     display: flex;
@@ -91,4 +80,16 @@
       font-size: calc(1vw + 16px);
     }
   }
+}
+.pickRep {
+  background: rgba(242, 242, 242, 1);
+  overflow-wrap: break-word;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(79, 79, 79, 1);
 }
