--- a/src/components/Content/Table/style.module.scss
+++ b/src/components/Content/Table/style.module.scss
@@ -1,3 +1,7 @@
+$font-family: Roboto, sans-serif;
+$font-size-large: 16px;
+$font-size-medium: 14px;
+$font-size-small: 12px;
 .searchTable {
   overflow-y: auto;
   height: calc(100vh - 80px - 128px - 32px - 16px);
@@ -10,8 +14,8 @@
     }
     width: 100%;
     border-collapse: collapse;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
+    font-family: $font-family;
+    font-size: $font-size-large;
     box-sizing: border-box;
 
     th,
@@ -20,8 +24,8 @@
       box-sizing: border-box;
       padding: 10px;
       border-bottom: 1px solid #ddd;
-      font-family: Roboto;
-      font-size: 14px;
+      font-family: $font-family;
+      font-size: $font-size-medium;
       letter-spacing: 0.17px;
       text-align: left;
       color: rgba(0, 0, 0, 0.87);
@@ -69,7 +73,7 @@
       th,
       td {
         padding: 5px;
-        font-size: 12px;
+        font-size: $font-size-small;
         text-align: left;
         color: rgba(0, 0, 0, 0.87);
         line-height: 16px;
@@ -113,7 +117,7 @@
       margin-top: 8px;
     }
     tr:last-of-type {
-      font-family: Roboto;
+      font-family: $font-family;
       text-align: center;
       font-size: calc(2vw + 10px);
       top: 50%;
@@ -133,7 +137,7 @@
     }
     tr {
       margin-top: 20px;
-      font-family: Roboto;
+      font-family: $font-family;
       text-align: center;
       font-size: calc(1vw + 10px);
       width: 100%;
@@ -146,8 +150,8 @@
     position: absolute;
     div {
       p {
-        font-family: Roboto;
-        font-size: 12px;
+        font-family: $font-family;
+        font-size: $font-size-small;
         font-weight: 400;
         line-height: 19.92px;
         letter-spacing: 0.4px;
@@ -158,8 +162,8 @@
       }
 
       div {
-        font-family: Roboto;
-        font-size: 12px;
+        font-family: $font-family;
+        font-size: $font-size-small;
         font-weight: 400;
         line-height: 19.92px;
         letter-spacing: 0.4px;
