--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,3 +1,5 @@
+$font-family: Roboto, sans-serif;
+
 .header {
   background-color: rgba(0, 131, 143, 1);
 }
@@ -16,7 +18,7 @@
     border: none;
     border-radius: 4px;
     padding: 0px 16px;
-    font-family: Roboto;
+    font-family: $font-family;
     font-size: 14px;
     font-weight: 700;
     color: rgba(0, 0, 0, 0.87);
